# Printer-Application-Snaps

./: .gitignore  README.md  TODO.txt  config.status  configure  configure.ac  foomatic-engine-foomaticbin.patch  hpfax-snap-directories.patch  notes.txt  patch-prnt-snap-directory.patch  pwg-raster-mime.patch
convs/: pwgtoraster.convs
snap/: snapcraft.yaml  snapcraft.yaml.in
snap/local/: snapcraft.yaml.in
